--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="py-6 px-6 flex items-center justify-between border-b border-gray-200">
-         <a href="/" class="text-xl font-semibold">Eskarap</a>
+         <a href="{% url 'core:index' %}" class="text-xl font-semibold">Eskarap</a>
          <div class="space-x-6">
             <a href="#" class="text-lg font-semibold hover:text-gray-500">New Item</a>
             <a href="#" class="text-lg font-semibold hover:text-gray-500">Browse</a>
@@ -31,7 +31,7 @@
             <h3 class="mb-5 font-semibold text-gray-400">Menu</h3>
             <ul class="space-y-2">
                 <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">About</a></li>
-                <li><a href="{% url 'contact' %}" class="text-lg text-teal-500 hover:text-teal-700">Contact</a></li>
+                <li><a href="{% url 'core:contact' %}" class="text-lg text-teal-500 hover:text-teal-700">Contact</a></li>
                 <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">Privacy</a></li>
                 <li><a href="#" class="text-lg text-teal-500 hover:text-teal-700">Terms of Use</a></li>
             </ul>
