--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -5,17 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>{% block title %}{% endblock title %} | Eskarap</title>
+    <title>{% block title %}{% endblock title %} | Gratific</title>
 </head>
 <body>
     <nav class="py-6 px-6 flex items-center justify-between border-b border-gray-200">
-         <a href="{% url 'core:index' %}" class="text-xl font-semibold">Eskarap</a>
+         <a href="{% url 'core:index' %}" class="text-xl font-semibold">Gratific</a>
          <div class="space-x-6">
             <a href="#" class="text-lg font-semibold hover:text-gray-500">New Item</a>
             <a href="#" class="text-lg font-semibold hover:text-gray-500">Browse</a>
-            <a href="#" class="px-6 py-3 text-lg font-semibold text-white bg-teal-500 rounded-xl hover:bg-teal-700">Sign Up</a>
-            <a href="#" class="px-6 py-3 text-lg font-semibold text-white bg-gray-500 rounded-xl hover:bg-gray-700">Log In</a>
-         </div>
+            {% if request.user.is_authenticated %}
+                <a href="#" class="px-6 py-3 text-lg font-semibold text-white bg-teal-500 rounded-xl hover:bg-teal-700">Inbox</a>
+                <a href="#" class="px-6 py-3 text-lg font-semibold text-white bg-gray-500 rounded-xl hover:bg-gray-700">Dashboard</a>
+            {% else %}
+                <a href="{% url 'core:signup' %}" class="px-6 py-3 text-lg font-semibold text-white bg-teal-500 rounded-xl hover:bg-teal-700">Sign Up</a>
+                <a href="{% url 'core:login' %}" class="px-6 py-3 text-lg font-semibold text-white bg-gray-500 rounded-xl hover:bg-gray-700">Log In</a>
+            {% endif %}
+        </div>
     </nav>
     <div class="px-6 py-6">
         {% block content %}
