--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -11,7 +11,7 @@
     <nav class="py-6 px-6 flex items-center justify-between border-b border-gray-200">
          <a href="{% url 'core:index' %}" class="text-xl font-semibold">Gratific</a>
          <div class="space-x-6">
-            <a href="#" class="text-lg font-semibold hover:text-gray-500">New Item</a>
+            <a href="{% url 'item:newitem' %}" class="text-lg font-semibold hover:text-gray-500">New Item</a>
             <a href="#" class="text-lg font-semibold hover:text-gray-500">Browse</a>
             {% if request.user.is_authenticated %}
                 <a href="#" class="px-6 py-3 text-lg font-semibold text-white bg-teal-500 rounded-xl hover:bg-teal-700">Inbox</a>
