--- a/item/templates/item/add_new_item.html
+++ b/item/templates/item/add_new_item.html
@@ -4,7 +4,7 @@
 
 {% block content %}
      <div class="mb-6 text-3xl">{{title}}</div>
-     <form action="." method="post" enctype="multipart/form-data">
+     <form action="/" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="space-y-4">
             {{form.as_p}}
@@ -16,6 +16,6 @@
                 {% endfor %}
             </div>
         {% endif %}
-        <button class="mt-6 py-4 px-8 text-lg bg-blue-500 hover:bg-blue-700 rounded-xl">Add Item</button>
+        <button class="mt-6 py-4 px-8 text-lg bg-blue-500 hover:bg-blue-700 rounded-xl">Submit</button>
      </form>
 {% endblock content %}
