--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -12,7 +12,7 @@
          <a href="{% url 'core:index' %}" class="text-xl font-semibold">Gratific</a>
          <div class="space-x-6">
             <a href="{% url 'item:newitem' %}" class="text-lg font-semibold hover:text-gray-500">New Item</a>
-            <a href="#" class="text-lg font-semibold hover:text-gray-500">Browse</a>
+            <a href="{% url 'item:search' %}" class="text-lg font-semibold hover:text-gray-500">Browse</a>
             {% if request.user.is_authenticated %}
                 <a href="#" class="px-6 py-3 text-lg font-semibold text-white bg-teal-500 rounded-xl hover:bg-teal-700">Inbox</a>
                 <a href="{% url 'dashboard:index' %}" class="px-6 py-3 text-lg font-semibold text-white bg-gray-500 rounded-xl hover:bg-gray-700">Dashboard</a>
