--- a/item/templates/item/add_new_item.html
+++ b/item/templates/item/add_new_item.html
@@ -4,7 +4,7 @@
 
 {% block content %}
      <div class="mb-6 text-3xl">{{title}}</div>
-     <form action="/" method="post" enctype="multipart/form-data">
+     <form action="." method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="space-y-4">
             {{form.as_p}}
